fix spacing for text inputs on upload page

--- a/src/pages/UploadPage/UploadPage.scss
+++ b/src/pages/UploadPage/UploadPage.scss
@@ -92,10 +92,14 @@
         @include desktop {
             flex: 1;
             margin-top: 0;
-            flex-direction: row;
-            flex-wrap: wrap;
             margin-left: 1.5rem;
         }
+    }
+
+    &__title-container,
+    &__desc-container {
+        display: flex;
+        flex-direction: column;
     }
 
     &__input-label {
@@ -105,10 +109,8 @@
         font-weight: bold;
         margin-bottom: 0.25rem;
 
-        @include desktop {
-            &--desc {
-                align-self: flex-end;
-            }
+        @include tablet {
+            margin-bottom: 0.5rem;
         }
     }
 
@@ -129,6 +131,10 @@
 
             @include tablet {
                 height: 2.5rem;
+            }
+
+            @include desktop {
+                margin-bottom: 1.375rem;
             }
         }
 
